--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "ditagis.com.vinhlong.capnhatdongho"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     repositories {
@@ -51,6 +51,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.esri.arcgisruntime:arcgis-android:100.5.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
     implementation 'net.sourceforge.jtds:jtds:1.3.0'
     implementation('io.socket:socket.io-client:0.8.3') {
         exclude group: 'org.json', module: 'json'
