--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
 
     <application
         android:name=".entities.DApplication"
-
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -48,6 +47,9 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".UpdateActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".TextInputLayoutActivity"
             android:parentActivityName=".MainActivity"></activity>
     </application>
 
