--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,11 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".UpdateActivity"
+            android:label="Cập nhật thông tin"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".VatTuActivity"
+            android:label="Cập nhật vật tư"
             android:parentActivityName=".MainActivity" />
     </application>
 
