--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,21 +41,16 @@ android {
 
 
 dependencies {
-    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    implementation 'com.esri.arcgisruntime:arcgis-android:100.5.0'
+    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.esri.arcgisruntime:arcgis-android:100.5.0'
+//    testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
-    implementation 'net.sourceforge.jtds:jtds:1.3.0'
-    implementation('io.socket:socket.io-client:0.8.3') {
-        exclude group: 'org.json', module: 'json'
-    }
-    implementation 'com.google.android.gms:play-services:12.0.1'
 
 }
